<?xml version="1.0"?>
<package format="2">
  
  <name>stereo_dense_reconstruction</name>
  <version>1.0.0</version>
  <description>The stereo_dense_reconstruction package</description>
  
  <maintainer email="sourishg@iitkgp.ac.in">Sourish Ghosh</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>

</package>